Adapt code to 7.x